# Pine64_Ox64_SBC

./: Readme.md
uart/: CMakeLists.txt  Readme.md  index.html  picoprobe.uf2
uart/src/: cdc_uart.c  cdc_uart.h  main.c  picoprobe_config.h  tusb_config.h  usb_descriptors.c
